--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "rewrites": [
         {
+            "source": "/api/(.*)",
+            "destination": "/backend/app.py"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
